--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 </head>
 <body>
 <header>
-  <h1>Bienvenue sur mon site !</h1>
+  <h1>Bienvenue sur le site officiel de littelmask et sharky!</h1>
 </header>
 
 <main>
-  <p>Ceci est un site simple et statique.</p>
-  <p>Tu peux ajouter des images, des liens ou des listes ici.</p>
+  <p>Le lien de notre chaine yt ↓</p>
+  <p>https://www.youtube.com/@littelmasksharky/videos</p>
 </main>
 
 <footer>
@@ -20,3 +20,4 @@
 </footer>
 </body>
 </html>
+
