--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 
 <main>
   <p>Le lien de notre chaine yt ↓</p>
-  <p>https://www.youtube.com/@littelmasksharky/videos</p>
+  <a href=https://www.youtube.com/channel/UCgUuyOw4Lpo3cLjzC3z1rWw>Chaine Youtube</a>
 </main>
 
 <footer>
-  <p>&copy; 2025 MonSite</p>
+  <p>&copy; 2025 Littelmask et Sharky</p>
 </footer>
 </body>
 </html>
+
 
