--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <main>
   <p>Le lien de notre chaine yt ↓</p>
-  <a href=https://www.youtube.com/channel/UCgUuyOw4Lpo3cLjzC3z1rWw>Chaine Youtube</a>
+  <a href=https://www.youtube.com/@littelmasksharky>Chaine Youtube</a>
 </main>
 
 <footer>
@@ -20,5 +20,6 @@
 </footer>
 </body>
 </html>
+
 
 
