--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
 <meta charset="UTF-8">
-<title>Mon premier site</title>
+<title>Accueil Littelmask & Sharky</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
 </header>
 
 <main>
-  <p>Le lien de notre chaine yt ↓</p>
+  <p>Le lien de notre chaine Youtube↓</p>
   <a href=https://www.youtube.com/@littelmasksharky>Chaine Youtube</a>
 </main>
 
@@ -20,6 +20,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
