--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <main>
   <p>Le lien de notre chaine Youtube↓</p>
-  <a href=https://www.youtube.com/@littelmasksharky>Chaine Youtube</a>
+<a href="https://www.youtube.com/@littelmasksharky" target="_blank">Chaine Youtube</a>
 </main>
 
 <footer>
@@ -20,6 +20,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
