--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
 </head>
 <body>
 <header>
-  <h1>Bienvenue sur le site officiel de littelmask et sharky!</h1>
+  <h1>Bienvenue sur le site officiel de Littelmask & Sharky !</h1>
 </header>
 
 <main>
-  <p>Le lien de notre chaine Youtube↓</p>
-<a href="https://www.youtube.com/@littelmasksharky" target="_blank">Chaine Youtube</a>
+  <p>Découvrez notre contenu sur YouTube ↓</p>
+  <a href="https://www.youtube.com/@littelmasksharky" target="_blank">Chaîne YouTube</a>
+  <p>Explorez notre autre page :</p>
+  <a href="page2.html">Page 2</a>
 </main>
 
 <footer>
@@ -20,8 +22,5 @@
 </footer>
 </body>
 </html>
-
-
-
 
 
