--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@
   <p>&copy; 2025 Littelmask et Sharky</p>
 </footer>
 
-  <script src="script.js"></script>
+<!-- Inclusion du JavaScript -->
+<script src="script.js"></script>
 </body>
 </html>
+
+
 
 
 
