--- a/page2.html
+++ b/page2.html
@@ -2,18 +2,23 @@
 <html lang="fr">
 <head>
 <meta charset="UTF-8">
-<title>Page 2 Littelmask & Sharky</title>
+<title>Vidéos Littelmask & Sharky</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header>
-  <h1>Page 2 du site officiel</h1>
+  <h1>Nos vidéos</h1>
 </header>
 
-<main>
-  <p>Voici la deuxième page de notre site !</p>
-  <p>Retour à l’accueil :</p>
-  <a href="index.html">Accueil</a>
+<main class="video-page">
+  <div class="video-container">
+    <!-- Exemple de vidéos YouTube intégrées -->
+    <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/3JZ_D3ELwOQ" frameborder="0" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/L_jWHffIx5E" frameborder="0" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/eY52Zsg-KVI" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <p><a href="index.html">Retour à l'accueil</a></p>
 </main>
 
 <footer>
