--- a/page2.html
+++ b/page2.html
@@ -14,9 +14,9 @@
   <div class="video-container">
     <!-- Exemple de vidéos YouTube intégrées -->
     <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
-    <iframe src="https://www.youtube.com/embed/3JZ_D3ELwOQ" frameborder="0" allowfullscreen></iframe>
-    <iframe src="https://www.youtube.com/embed/L_jWHffIx5E" frameborder="0" allowfullscreen></iframe>
-    <iframe src="https://www.youtube.com/embed/eY52Zsg-KVI" frameborder="0" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/watch?v=bU5OeoGiVMw" frameborder="0" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/watch?v=5sQgRD1mr74" frameborder="0" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/watch?v=ugD_hrq0Gms" frameborder="0" allowfullscreen></iframe>
   </div>
   <p><a href="index.html">Retour à l'accueil</a></p>
 </main>
