--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
   <h1>Bienvenue sur le site officiel de Littelmask & Sharky !</h1>
 </header>
 
-<main>
-  <p>Découvrez notre contenu sur YouTube ↓</p>
-  <a href="https://www.youtube.com/@littelmasksharky" target="_blank">Chaîne YouTube</a>
-  <p>Explorez notre autre page :</p>
-  <a href="page2.html">Page 2</a>
+<main class="full-center">
+  <div class="center-text">
+    <p>Le lien de notre chaîne YouTube ↓</p>
+    <a href="https://www.youtube.com/@littelmasksharky" target="_blank">Chaîne YouTube</a>
+    <p>Explorez notre autre page :</p>
+    <a href="page2.html">Page 2</a>
+  </div>
 </main>
 
 <footer>
   <p>&copy; 2025 Littelmask et Sharky</p>
 </footer>
 
-<!-- Inclusion du JavaScript -->
 <script src="script.js"></script>
 </body>
 </html>
-
 
 
 
